Tikiwiki Changelog
------------------
$Header: /cvsroot/tikiwiki/tiki/changelog.txt,v 1.118 2003-10-14 19:37:01 dheltzel Exp $

All developers are invited to add relevant changes in that file as they
apply them to the CVS source. You can optionnaly indicate an identifer
for the origin of the change (author, submitter, anyone involved) but
it's not so useful as the cvs log knows who adds what when.

Use the following tags to distinguish changes :
* [NEW] apply to something new added in tikiwiki
* [MOD] is an enhancement, not really new but make things come easier
* [FIX] can be used for bug fixes of any sort

Please wrap your lines to 80 characters and indent them with spaces only.
------------------

Version 1.8 --
<http://tikiwiki.org/ReleaseProcess18>

* [MOD] some module info removed from tiki_user_assigned_modules, now it comes
  from tiki_modules, as you would expect.
* [MOD] added an anchor jump to comments on comments and attachment links
* [NEW] Plugin to include information from an article.
* [NEW] Ability to turn certain fields off in the view article page, similar to
  what is permitted for the list article page.
* [MOD] Improved thread display of comments
* [NEW] newsletter enhancements - per newsletter determine whether users can
  subscribe, whether the address must be validated, and whether to include an
  unsubscribe msg when a newsletter is sent. Removed frequency as unused.
* [NEW] plugin for automatic link building of sourceforge tracker items
  using {SF(aid=>xxxxxx)}{SF}
* [NEW] Editable dynamic variables can be added to tiki objects using %name%.
  This allows quick editing and displaying of short information in wiki pages
  and other objects.
* [NEW] Last n messages posted in a forum can be displayed when listing forum
  topics to provide a quick access to the last posts in the forum regardless if
  they are new topics or replies to an existing thread. This is optional and the
  number of post titles to display can be configured.